--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 </head>
 <body>
     <header>
-        <div class="box1"></div>
-        <div class="box2"></div>
+        <div class="box1 header-box"></div>
+        <div class="box2 header-box"></div>
     </header>
+    <main>
+        <section>
+            <div class="section-box1 white-box"></div>
+            <div class="section-box2 white-box"></div>
+            <div class="section-box3">
+                <div class="left-box white-box pill"></div>
+                <div class="right-box white-box pill"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
