--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 </head>
 <body>
     <header>
-        <div class="box1 header-box"></div>
-        <div class="box2 header-box"></div>
+        <img src="DevMtnImg.png" class="DevMtn" alt="Dev Mountain logo"  >
+        <div class="navBar">
+            <ul>
+                <li>About</li>
+                <li>Team</li>
+                <li>Services</li>
+                <li>Features</li>
+                <li>Contacts</li>
+            </ul>
+        </div>
     </header>
     <main>
         <section>
-            <div class="section-box1 white-box"></div>
-            <div class="section-box2 white-box"></div>
-            <div class="section-box3">
-                <div class="left-box white-box pill"></div>
-                <div class="right-box white-box pill"></div>
-            </div>
+            <h2>To be better is to execute more</h2>
+            <h4>It's not the smartest who will win, but those who put in the work.</h4>
+            <button class="button"type="button">GET STARTED</button>
         </section>
-    </main>
+        </main>
 </body>
 </html>
